[package]
name = "clam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boilerplate = "1.0.0"
clap = { version = "4.5.3", default-features = false, features = ["derive", "std", "help", "usage"] }
git2 = { version = "0.18.3", default-features = false }
html-escaper = "0.2.0"
orgize = "=0.10.0-alpha.7"
rowan = "0.15.15"
serde = "1.0.197"
toml = "0.8.12"
