[package]
name = "clam"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boilerplate = "1.0.0"
chrono = { version = "0.4.35", default-features = false }
clap = { version = "4.5.3", default-features = false, features = ["derive", "std", "help", "usage"] }
git2 = { version = "0.18.3", default-features = false }
html-escaper = "0.2.0"
orgize = "=0.10.0-alpha.9"
rowan = "0.15.15"
serde = { version = "1.0.197", default-features = false }
serde_derive = { version = "1.0.197" }
slugify = "0.1.0"
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
