[package]
name = "clam"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boilerplate = "1.0.0"
chrono = { version = "0.4.35", default-features = false }
clap = { version = "4.5.3", default-features = false, features = ["derive", "std", "help", "usage"] }
git2 = { version = "0.18.3", default-features = false }
html-escaper = "0.2.0"
indexmap = "2.4.0"
micro_http_server = { version = "0.0.5", optional = true }
orgize = "=0.10.0-alpha.10"
regex = { version = "1.10.5", default-features = false, features = ["std"] }
rowan = "0.15.15"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.125", optional = true }
slugify = "0.1.0"
toml_edit = { version = "0.22.12", default-features = false, features = ["serde", "parse"] }

[features]
default = ["util"]
util = ["dep:micro_http_server", "dep:serde_json"]
